# purejson

./: .gitignore  PLAN.md  pyproject.toml
src/purejson/: __init__.py  core.py  query.py
tests/: test_core.py  test_query.py
