[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "purejson"
version = "0.0.1"
description = "A family of containers or 'dataclasses' with an opinionated Json and Document Database flavor."
requires-python = ">=3.11"
# extjson is the base layer: the one allowed replacement for stdlib
# json/jsonschema. PureJson Documents serialize and validate through
# extjson (never stdlib json directly), so purejson depends on it.
# extjson does NOT import purejson — the dependency is one-way.
dependencies = ["extjson"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
